// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSAccordion Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-accordion"
    name="base-example-accordion"
  >
    <li
      className="slds-accordion__list-item"
    >
      <section
        className="slds-accordion__section"
      >
        <div
          className="slds-accordion__summary"
        >
          <h3
            className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
          >
            <button
              aria-controls="1-accordion-panel"
              aria-expanded={false}
              className="slds-button slds-button_reset slds-accordion__summary-action"
              disabled={false}
              id="1-accordion-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#switch"
                />
              </svg>
              <span
                className="slds-truncate"
                title="Accordion Summary"
              >
                Accordion Summary
              </span>
            </button>
          </h3>
          <div
            className="slds-dropdown-trigger slds-dropdown-trigger_click"
            id="1"
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={null}
            onMouseLeave={null}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="slds-button slds-button_icon-border-filled slds-button_icon-x-small ignore-click-1 slds-shrink-none"
              disabled={false}
              onClick={[Function]}
              tabIndex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                More Options
              </span>
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="slds-accordion__content"
          id="1-accordion-panel"
        >
          Accordion details - A
        </div>
      </section>
    </li>
    <li
      className="slds-accordion__list-item"
    >
      <section
        className="slds-accordion__section"
      >
        <div
          className="slds-accordion__summary"
        >
          <h3
            className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
          >
            <button
              aria-controls="2-accordion-panel"
              aria-expanded={false}
              className="slds-button slds-button_reset slds-accordion__summary-action"
              disabled={false}
              id="2-accordion-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#switch"
                />
              </svg>
              <span
                className="slds-truncate"
                title="Accordion Summary"
              >
                Accordion Summary
              </span>
            </button>
          </h3>
          <div
            className="slds-dropdown-trigger slds-dropdown-trigger_click"
            id="2"
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={null}
            onMouseLeave={null}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="slds-button slds-button_icon-border-filled slds-button_icon-x-small ignore-click-2 slds-shrink-none"
              disabled={false}
              onClick={[Function]}
              tabIndex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                More Options
              </span>
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="slds-accordion__content"
          id="2-accordion-panel"
        >
          Accordion details - B
        </div>
      </section>
    </li>
    <li
      className="slds-accordion__list-item"
    >
      <section
        className="slds-accordion__section"
      >
        <div
          className="slds-accordion__summary"
        >
          <h3
            className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
          >
            <button
              aria-controls="3-accordion-panel"
              aria-expanded={false}
              className="slds-button slds-button_reset slds-accordion__summary-action"
              disabled={false}
              id="3-accordion-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#switch"
                />
              </svg>
              <span
                className="slds-truncate"
                title="Accordion Summary"
              >
                Accordion Summary
              </span>
            </button>
          </h3>
          <div
            className="slds-dropdown-trigger slds-dropdown-trigger_click"
            id="3"
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={null}
            onMouseLeave={null}
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="slds-button slds-button_icon-border-filled slds-button_icon-x-small ignore-click-3 slds-shrink-none"
              disabled={false}
              onClick={[Function]}
              tabIndex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                More Options
              </span>
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="slds-accordion__content"
          id="3-accordion-panel"
        >
          Accordion details - C
        </div>
      </section>
    </li>
  </ul>
</div>
`;

exports[`DOM snapshots SLDSAccordion Base Open 1`] = `
<div
  className="slds-p-around_medium"
>
  <ul
    className="slds-accordion"
    name="base-example-accordion"
  >
    <li
      className="slds-accordion__list-item"
    >
      <section
        className="slds-accordion__section slds-is-open"
      >
        <div
          className="slds-accordion__summary"
        >
          <h3
            className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
          >
            <button
              aria-controls="1-accordion-panel"
              aria-expanded={true}
              className="slds-button slds-button_reset slds-accordion__summary-action"
              disabled={false}
              id="1-accordion-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#switch"
                />
              </svg>
              <span
                className="slds-truncate"
                title="Accordion Summary"
              >
                Accordion Summary
              </span>
            </button>
          </h3>
        </div>
        <div
          aria-hidden={false}
          className="slds-accordion__content"
          id="1-accordion-panel"
        >
          Accordion details - A
        </div>
      </section>
    </li>
    <li
      className="slds-accordion__list-item"
    >
      <section
        className="slds-accordion__section slds-is-open"
      >
        <div
          className="slds-accordion__summary"
        >
          <h3
            className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
          >
            <button
              aria-controls="2-accordion-panel"
              aria-expanded={true}
              className="slds-button slds-button_reset slds-accordion__summary-action"
              disabled={false}
              id="2-accordion-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#switch"
                />
              </svg>
              <span
                className="slds-truncate"
                title="Accordion Summary"
              >
                Accordion Summary
              </span>
            </button>
          </h3>
        </div>
        <div
          aria-hidden={false}
          className="slds-accordion__content"
          id="2-accordion-panel"
        >
          Accordion details - B
        </div>
      </section>
    </li>
    <li
      className="slds-accordion__list-item"
    >
      <section
        className="slds-accordion__section slds-is-open"
      >
        <div
          className="slds-accordion__summary"
        >
          <h3
            className="slds-text-heading_small slds-accordion__summary-heading slds-has-flexi-truncate"
          >
            <button
              aria-controls="3-accordion-panel"
              aria-expanded={true}
              className="slds-button slds-button_reset slds-accordion__summary-action"
              disabled={false}
              id="3-accordion-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon slds-accordion__summary-action-icon slds-button__icon slds-button__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#switch"
                />
              </svg>
              <span
                className="slds-truncate"
                title="Accordion Summary"
              >
                Accordion Summary
              </span>
            </button>
          </h3>
        </div>
        <div
          aria-hidden={false}
          className="slds-accordion__content"
          id="3-accordion-panel"
        >
          Accordion details - C
        </div>
      </section>
    </li>
  </ul>
</div>
`;
